# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Changed
- [SYSCTL] Comment each setting and improve compatibility with hbsd14


## [2.1.18] - 2025-10-24
### Removed
- [HAPROXY] [SPOE] Remove obsoleted configuration files


## [2.1.17] - 2025-08-22
### Added
- [LOGROTATE] Add copytruncate option for pstats log file


## [2.1.16] - 2025-05-16
### Fixed
- [SUDOERS] Allow '-f' flag when removing filebeat configs


## [2.1.15] - 2025-04-30
### Changed
- [TSHARK] Allow to define custom tshark options, and limit default dumpfile size and quantity


## [2.1.14] - 2025-03-28
### Added
- [HOSTNAME] Set hostname in the new .env files if present
### Removed
- [SSHD] Remove custom Addendum from Version Headers


## [2.1.13] - 2025-02-25
### Removed
- [SUDOERS] Remove deprecated entries for vlt-os user
### Changed
- [SUDOERS] Update sudoers' permissions for filebeat management


## [2.1.12] - 2024-11-13
### Fixed
- [CLOUD_INIT] Avoid automatic cache invalidation when datasources change on a machine


## [2.1.11] - 2024-09-12
### Changed
- [RSYSLOG_TEMPLATES] Control uuid generation in bulkid-template


## [2.1.10] - 2024-04-25
### Fixed
- [UPDATE_SYSTEM] Don't upgrade secadm-kmod in jails
### Changed
- [JAILS] Don't install Kernel in jails


## [2.1.9]- 2024-03-04
### Removed
- [JAILS] remove now-useless mkjail-* scripts
- [BASE_SUDOERS] mentions of mkjail-*
### Changed
- [SCRIPTS] Update Redis/Sentinel's announce-ip through redis commands when changing Vulture management IP
- [SYSTEM] [CSHRC] Add usefull keyboard bindings
- [UPDATE_SYSTEM] Stop vultured service during upgrades
- [UPDATE_SYSTEM] Install kernel/base in a separate Boot Environment
### Fixed
- [CLUSTER_JOIN] Fix wrong ca.key after cluster_join
- [NETWORK_IPS] Init pf rules before redis access