@@ -15,20 +15,17 @@ JAIL_NAME="$1"
 TARGET="/zroot/${JAIL_NAME}"
 
 # Configure /etc/hosts of jail
-/bin/echo "::1 localhost" > ${TARGET}/etc/hosts
-/bin/echo "127.0.0.1 localhost" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::202 mongodb" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.2 mongodb" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::203 redis" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.3 redis" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::204 rsyslog" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.4 rsyslog" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::205 haproxy" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.5 haproxy" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.6 apache" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::206 apache" >> ${TARGET}/etc/hosts
-/bin/echo "127.0.0.7 portal" >> ${TARGET}/etc/hosts
-/bin/echo "fd00::207 portal" >> ${TARGET}/etc/hosts
+/bin/echo "127.0.0.1 localhost" > ${TARGET}/etc/hosts
+/bin/echo "::1 localhost" >> ${TARGET}/etc/hosts
 
-# Host's dnsmasq resolver is used by jails -> local loopback of the jail
-echo "nameserver ${JAIL_NAME}" > ${TARGET}/etc/resolv.conf
+i=2
+for jail in mongodb redis rsyslog haproxy apache portal; do
+    /bin/echo "127.0.0.$i $jail" >> ${TARGET}/etc/hosts
+    /bin/echo "fd00::20$i $jail" >> ${TARGET}/etc/hosts
+
+    # Host's dnsmasq resolver is used by jails -> local loopback of the jail
+    if [ "$jail" = "$JAIL_NAME" ]; then
+        echo "nameserver 127.0.0.$i" > ${TARGET}/etc/resolv.conf
+    fi
+    i=$((i + 1))
+done
