@@ -8,6 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Changed
 - [SYSCTL] Comment each setting and improve compatibility with hbsd14
+### Fixed
+- [RESOLV] Nameserver in jails
 
 
 ## [2.1.18] - 2025-10-24
